finally fixed the footer so that it is dynamic and stays at the bottom and covers no conent when content is added to pages

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,20 @@
   margin: 0 auto;
   text-align: center;
 }
+
+body, html {
+  height: 100%; 
+  margin: 0;   
+  display: flex;
+  flex-direction: column;
+}
+
+.app-wrapper {
+  min-height: 100%;  
+  display: flex;
+  flex-direction: column;
+}
+
 button {
   background-color: white;
   border: none;
@@ -65,5 +79,3 @@ button {
   font-size: small;
   font-weight: bold ;
 }
-
-
